--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,6 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }} 
     - run: | 
         docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER 
-        }}/ibasemployeeservice:latest
+        }}/ibasemployeeservice:${{ github.sha }} 
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER 
-        }}/ibasemployeeservice:latest
+        }}/ibasemployeeservice:${{ github.sha }} 
